address spacing issue from demo banner

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -236,3 +236,5 @@ body#expert {
 	#privacy_status a {color:#999;}
 	.lock {background: transparent url(/assets/icon-bw2-32-lock.png) left 50% no-repeat; padding-left:40px; clear:left; line-height:2em;}
 }
+
+body#expert.demo .container-fluid {margin-top:40px;}
